# robotics_software_engineer

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/module_1_assignment/lib/module_1_assignment/: task3
install/module_1_assignment/share/module_1_assignment/: package.sh
install/module_2_assignment/lib/module_2_assignment/: multi_turtlebot3_controller  task1_drive_turtle  task3_driver  task4_driver
log/: latest_build
module_1_assignment/: CMakeLists.txt  README.md
module_1_assignment/include/: sensor_library.h
module_1_assignment/src/: task_1.cpp  task_2.cpp  task_3.cpp
module_1_assignment/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
module_1_assignment/src/log/: latest_build
module_2_assignment/: CMakeLists.txt  README.md  package.xml
module_2_assignment/launch/: multi_turtlebot_service_call.launch.py  task3_assignment.launch.py  task4_assignment.launch.py
module_2_assignment/src/: multi_turtlebot3_controller.cpp  task1_drive_turtle.cpp  task3_driver.cpp  task4_driver.cpp
module_3_assignment/: CMakeLists.txt  README.md
module_3_assignment/config/: robot_arm.rviz
module_3_assignment/launch/: task1_rviz.launch.py  task2_rviz.launch.py  task3_rviz.launch.py
module_3_assignment/src/: static_transform.cpp
module_3_assignment/urdf/: task1.urdf  task2.urdf  task3.urdf
module_4_assessment/: README.md
module_4_assessment/module_4_assignment/: CMakeLists.txt
module_4_assessment/module_4_assignment/launch/: maze_solving.launch.py  task_3_wall_follwing.launch.py
module_4_assessment/module_4_assignment/models/square_maze/: model.sdf
module_4_assessment/module_4_assignment/src/: maze_solver.cpp  wall_follower_maze_solver.cpp
module_4_assessment/module_4_assignment/worlds/: final_maze.world
module_4_assessment/robot_sensing_debug/: CMakeLists.txt
module_4_assessment/robot_sensing_debug/launch/: lidar_maze_solving.launch.py
module_4_assessment/robot_sensing_debug/src/: line_following_with_camera.cpp  maze_solving_with_lidar.cpp
module_5_assignment/: CMakeLists.txt
module_6_assignment/: CMakeLists.txt
module_7_assignment/: CMakeLists.txt
module_8_assignment/: CMakeLists.txt
(+28 files in other folders)
